# RenderingEngine

./: CMakeLists.txt  README.md
resources/shaders/: phong.frag  phong.vert
src/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Transform.cpp  Transform.h  main.cpp
src/Engine/: Engine.cpp  Engine.h
src/Utils/: FileReader.cpp  FileReader.h
